<resources>
    <string name="app_name">FishMarker</string>
    <string name="name_water">Name_Water</string>
    <string name="_75757575757">75757575757</string>
    <string name="addmarker">Add marker on map?</string>
    <string name="coordinate">Coordinate will be add on base</string>
    <string name="latlng">Latitude/Longitude</string>
    <string name="date">Date</string>
    <string name="depth">0.00</string>
    <string name="Depth">Depth(meter)</string>
    <string name="Number">Amount of fish</string>
    <string name="number">integer</string>
    <string name="Note">Note</string>
    <string name="note">note</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="selectdate">SELECT DATE</string>
    <string name="titlemarker">Title marker</string>
    <string name="titlemarker2">20 symbols</string>


    ///////////////////////////////////////////////////////MENU

    <string name="back">back</string>
    <string name="add">add</string>
    <string name="recycler">Recycler</string>
    <string name="information">Information</string>

    ///////////////////////////////////////////////////////


    <string name="base">Base empty</string>

    ///////////////////////////////////////////////////////Сomplete marker information


    <string name="complete_c">Detail marker information</string>
    <string name="lat_c">Latitude: </string>
    <string name="lon_c">Longitude: </string>
    <string name="tit_c">Title marker: </string>
    <string name="date_c">Date: </string>
    <string name="depth_c">Depth: </string>
    <string name="amount_c">Amount: </string>
    <string name="note_c">Note: </string>

    ///////////////////////////////////////////////////////

    <string name="edit">EDIT</string>
    <string name="update">Update</string>
    <string name="unique">Marker exist</string>
    <string name="detail">DETAIL</string>


    ///////////////////////////////////////////////////////

    <string name="fill">Fill in all the fields</string>
    <string name="update_complete">UPDATE COMPLETE</string>
    <string name="add_base">Add to base, SELEBRATION</string>


    ///////////////////////////////////////////////////////

    <string name="you">You really want to delete the marker?</string>
    <string name="the">The marker will be removed </string>
    <string name="from">"from the database and from the map"</string>

    ///////////////////////////////////////////////////////OBJECT MAIN


    <string name="ocean">Ocean</string>
    <string name="sea">Sea</string>
    <string name="river">River</string>
    <string name="lake">Lake</string>
    <string name="gulf">Gulf</string>
    <string name="another">Another</string>

    <string name="coordinate_add">Coordinate will be add on base</string>

    <string name="ups">Upsss....</string>


    ///////////////////////////////////////////////////////OBJECTS WATER


    <string name="NorthPacific">North Pacific</string>
    <string name="SouthPacific">South Pacific</string>
    <string name="Southern">Southern</string>
    <string name="NorthAtlantic">North Atlantic</string>
    <string name="SouthAtlantic">South Atlantic</string>
    <string name="Indian">Indian</string>
    <string name="Arctic">Arctic</string>

    <string name="Black">Black</string>
    <string name="SeaOfAzov">Sea Of Azov</string>
    <string name="Baltic">Baltic</string>
    <string name="Red">Red</string>
    <string name="Caspian">Caspian</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="Arabian">Arabian</string>
    <string name="SeaofOkhotsk">Sea of Okhotsk</string>
    <string name="SeaofJapan">Sea of Japan</string>
    <string name="BeringSea">Bering Sea</string>
    <string name="NorthSea">North Sea</string>
    <string name="CaribeanSea">Caribean Sea</string>

    <string name="Baikal">Baikal</string>
    <string name="Victoria">Victoria</string>
    <string name="Titicaca">Titicaca</string>
    <string name="Superior">Superior</string>
    <string name="Michigan">Michigan</string>
    <string name="Huron">Huron</string>
    <string name="Onega">Onega</string>
    <string name="White">White</string>
    <string name="Ladoga">Ladoga</string>

    <string name="Dnieper">Dnieper</string>
    <string name="Dniester">Dniester</string>
    <string name="Southern_Bug">Southern_Bug</string>
    <string name="Turunchuk">Turunchuk</string>
    <string name="Volga">Volga</string>
    <string name="Yenisei">Yenisei</string>
    <string name="Lena">Lena</string>
    <string name="Ob">Ob</string>
    <string name="Angara">Angara</string>
    <string name="Amur">Amur</string>
    <string name="Amazonka">Amazonka</string>

    <string name="Persian">Persian</string>
    <string name="Taharonzka">Taharonzka</string>
    <string name="Finland">Finland</string>
    <string name="GulfofThailand">Gulf of Thailand</string>
    <string name="Bengal">Bengal</string>
    <string name="ReservoirHAES">Reservoir HAES</string>
    <string name="RibinskiyReservoir">Ribinskiy Reservoir</string>
    <string name="KuibishivskiyReservoir">Kuibishivskiy Reservoir</string>

    ////////////////////////////////////GPS

    <string name="gps_enable">GPS is not enabled. Please turn ON GPS.</string>
    <string name="gps_settings">GPS settings</string>
    <string name="settings">Settings</string>

    //////////////////////////////////REGISRATION
    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="Location">Country</string>
    <string name="location">country</string>
    <string name="Dont_have">Dont have account, create</string>
    <string name="Register">Registration</string>
    <string name="empty_name">empty name</string>
    <string name="empty_email">empty email</string>
    <string name="not_valid_email">not valid email</string>
    <string name="not_valid_password">not valid password</string>
    <string name="empty_email_or_password">email or password is empty</string>
    <string name="requirementsy">does not meet the requirementsy</string>
    <string name="autorithation">Autorithation error, login or password not true</string>
    <string name="successfully">successfully logged in</string>
    <string name="verify">please verify your account on email</string>
    <string name="sent">password sent to your email</string>
    <string name="valid">"not valid data</string>
    <string name="password_empty">password empty</string>
    <string name="password_not_valid">password not valid</string>
    <string name="check">please check email</string>
    <string name="password_requirements">Password requirements:</string>
    <string name="requirements">1)At least 8 chars\n2)Digit must occur at least once\n3)A lower case letter must occur at least once\n4)An upper case letter must occur at least once\n5)No whitespace allowed in the entire string</string>
    <string name="sent_pass">Send my Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="not_valid_name">not valid name</string>



    not_vali_name


    ///////////////////////////////PLACE_USER_ACTIVITY
    <string name="text_user_place">Here could be your water features.
    To add an object, click on the drop and select an object.
    Specify the middle of the water body using and set the zoom.
    Anchor to the right place.</string>

    ////////////////////////////////PLACE

    <string name="delete">Delete</string>
    <string name="delete_place_title">Deleting a fishing place</string>
    <string name="delete_place_message">The place will be removed from the database(, do you really want this?</string>
    <string name="zoom">Zoom: </string>
    <string name="name_object">name object</string>
    <string name="add_place">You want add water object?</string>

    <string name="name_holder">Name</string>
    <string name="latitude_holder">Latitude</string>
    <string name="longitude_holder">Longitude</string>
    <string name="zoom_holder">Zoom</string>



    /////////////////////////////////FACEBOOK

    <string name="facebook_app_id">838535596479448</string>
    <string name="fb_login_protocol_scheme">fb838535596479448</string>


    /////////////////////////////////TITLE ACTIVITY


    <string name="registration">Registration</string>
    <string name="registration_big">REGISTRATION</string>
    <string name="places">Places</string>
    <string name="markers">Markers</string>
    <string name="add_marker_activity">Add marker</string>
    <string name="water_object">Water object</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in_activity">Sign In</string>
    <string name="add_places">Add place</string>


    /////////////////////////////////MARKERS


    <string name="foreign_markers">You can not edit or delete foreign markers</string>


    //////////////////////////////////BOTTOM SHEET








</resources>
