<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/title_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/add_place"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/latitude_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/lat_c"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/longitude_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/lon_c"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/zoom_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/zoom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:hint="@string/name_object">

    </EditText>

</LinearLayout>